tmp/primarycluster-services-mtls.yaml

# 网格开启全局mtls认证(客户端)
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: "default"
  namespace: istio-system
  labels:
    app: security
    chart: security
    heritage: Tiller
    release: istio
spec:
  host: "*.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---

# 全局mtls认证例外: 因为 k8s api server 没有sidecar, 所以客户端访问api server需要禁用mtls
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: "api-server"
  namespace: istio-system
  labels:
    app: security
    chart: security
    heritage: Tiller
    release: istio
spec:
  host: "kubernetes.default.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: DISABLE

---
# todo 为什么例外
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: meshexpansion-dr-pilot
  namespace: istio-system
  labels:
    app: pilot
    chart: pilot
    heritage: Tiller
    release: istio
spec:
  host: istio-pilot.istio-system.svc.cluster.local
  trafficPolicy:
    portLevelSettings:
    - port:
        number: 15011
      tls:
        mode: DISABLE

---
# 配置mixer 断路器功能, 注意保留mtls
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  labels:
    app: mixer
    chart: mixer
    heritage: Tiller
    release: istio
  name: istio-telemetry
  namespace: istio-system
spec:
  host: istio-telemetry.istio-system.svc.cluster.local
  trafficPolicy:
    connectionPool:
      http:
        http2MaxRequests: 10000
        maxRequestsPerConnection: 10000
    tls:
      mode: ISTIO_MUTUAL

---
# 全局mtls认证例外: meshmonitor 没有sidecar, 所以客户端访问时需要禁用mtls
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: meshmonitor
  namespace: istio-system
spec:
  host: meshmonitor.istio-system.svc.cluster.local
  trafficPolicy:
    portLevelSettings:
    - port:
        number: 7777
      tls:
        mode: DISABLE
